--- a/style.css
+++ b/style.css
@@ -722,6 +722,7 @@ footer{
             .Fsec-div-div,
             .Fsec-div-div-div-p {
                 width: 90%;
+                margin-bottom: 1rem;
             }
             
             .div-div-div-div button {
